style.css
/*----------------------------------------
General Styles
----------------------------------------*/
html, body {
	height: 100%;
}
body {
	margin: 0;
	padding: 0;
	font-family: 'Source Sans Pro', sans-serif;
	font-size: 15px;
	font-weight: 400;
	line-height: 1.75;
	letter-spacing: 1px;
	background-color: #fff;
	color: #484848;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	font-weight: 700;
	line-height: 1.2;
	color: #333;
}
p {
	font-size: 16px;
	line-height: 26px;
}
b, strong {
	font-weight: 700;
}
dfn, cite, em, i {
  	font-style: italic;
}
h1 {
	font-size: 36px;
}
h2 {
	font-size: 26px;
}
h3 {
	font-size: 24px;
}
h4 {
	font-size: 22px;
}
h5 {
	font-size: 18px;
}
h6 {
	font-size: 16px;
}
a, a:focus, a:hover, a:active {
	text-decoration: none;
	color: inherit;
	outline: none;
}
ul, ol {
	margin: 0;
	padding: 0;
}
ul {
  list-style: none;
}
img {
	display: block;
	max-width: 100%;
	height: auto;
}
.effect {
	-webkit-transition: all .4s ease-in-out;
	-moz-transition: all .4s ease-in-out;
	-o-transition: all .4s ease-in-out;
	transition: all .4s ease-in-out;
}
.hor-center {
	position: absolute;
	left: 50%;
	-webkit-transform: translateX(-50%);
	-moz-transform: translateX(-50%);
	-ms-transform: translateX(-50%);
	transform: translateX(-50%);
}
.ver-center {
	position: absolute;
	top: 50%;
	-webkit-transform: translateY(-50%);
	-moz-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	transform: translateY(-50%);
}
.center {
	position: absolute;
	left: 50%;
	top: 50%;
	-webkit-transform: translate(-50%, -50%);
	-moz-transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
}
.mb-30 {
  	margin-bottom: 30px;
}
.page-table {
	display: table;
	width: 100%;
	height: 100%;
}
.table-cell {
	position: relative;
	display: table-cell;
	vertical-align: middle;
	padding-top: 20px;
	z-index: 5;
}
.section {
	background-color: #fff;
  padding: 100px 0;
}
.second-bg {
	background-color: #fafafa;
}
.section-title {
	display: block;
	width: 100%;
	margin-bottom: 60px;
	text-align: center;
}
.section-title h2 {
	position: relative;
	display: inline-block;
	margin: 0;
	padding-bottom: 15px;
	font-size: 36px;
	font-weight: 700;
	text-transform: capitalize;
}
.section-title h2:after {
	content: '';
	position: absolute;
	bottom: 0;
	left: 4px;
	width: 50px;
	height: 2px;
	background-color: #444444;
}
/*----------------------------------------
Pre Loader
----------------------------------------*/
.loader-con {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: #fdfdfd;
	z-index: 99;
}
.loader-con .spinner {
  width: 50px;
  height: 50px;
}
.double-bounce1, .double-bounce2 {
	position: absolute;
	width: 100%;
	height: 100%;
	background-color: #333;
	opacity: 0.6;
	top: 0;
	left: 0;
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	border-radius: 50%;
	-webkit-animation: sk-bounce 2.0s infinite ease-in-out;
	-moz-animation: sk-bounce 2.0s infinite ease-in-out;
	animation: sk-bounce 2.0s infinite ease-in-out;
}
.double-bounce2 {
	-webkit-animation-delay: -1.0s;
	-moz-animation-delay: -1.0s;
	animation-delay: -1.0s;
}
/*----------------------------------------
Navigation
----------------------------------------*/
.nav-wrapper {
	width: 100vw;
	padding: 6px 0;
	position: fixed;
	top: 0;
	left: 0;
	background-color: transparent;
	z-index: 20;
}
.nav-wrapper .navbar-toggle .icon-bar {
	background-color: #fff;
}
.nav-wrapper .navbar {
  position: relative;
  min-height: 50px;
}
.nav-wrapper .navbar-brand {
	display: block;
	padding-bottom: 15px;
	padding-top: 15px;
	font-size: 20px;
	font-weight: 700;
	color: #ddd;
	float: left;
}

.nav-wrapper .nav li a {
	position: relative;
	font-size: 13px;
	font-weight: 700;
	color: #ddd;
}
.nav-wrapper .nav li a:after {
	content: "";
	display: none;
	position: absolute;
	width: 0;
	height: 2px;
	bottom: 6px;
	left: 10%;
	background-color: #ddd;
	-webkit-transition: all .28s ease-in-out;
	-o-transition: all .28s ease-in-out;
	-moz-transition: all .28s ease-in-out;
	transition: all .28s ease-in-out;
}
.nav-wrapper .nav>li>a:hover,
.nav-wrapper .nav>li>a.active {
	background-color: transparent;
}
.nav-wrapper .nav>li>a:hover:after,
.nav-wrapper .nav>li>a.active:after {
	width: 80%;
}
.nav-wrapper .nav>li>a:focus {
	background-color: transparent;
}
.nav-sticky {
	background-color: #fff !important;
	padding: 6px 0 !important;
	border-bottom: 1px solid #f0f0f0;
}
.nav-sticky .navbar-toggle .icon-bar {
	background-color: #232323;
}
.nav-sticky .navbar-brand,
.nav-sticky .nav li a {
	color: #232323;
}
.nav-sticky .nav li a:after {
	background-color: #3f3f3f;
}
.nav-sticky .navbar-collapse {
	-webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,.1);
	-moz-box-shadow: inset 0 1px 0 rgba(0,0,0,.1);
	box-shadow: inset 0 1px 0 rgba(0,0,0,.1);
}
/*----------------------------------------
Home
----------------------------------------*/
.theme-home {
	position: relative;
	height: 100%;
	min-height: 550px;
	background-image: url(/profile/home-bg-1.jpg);
	background-repeat: no-repeat;
	background-position: center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-ms-background-size: cover;
	background-size: cover;
}
.theme-home:after {
	content: "";
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	background-color: rgba(0,0,0,0.68);
	z-index: 0;
}
.theme-home #particles-js {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 2;
}
.avatar img {
	width: 130px;
	margin: 0 auto;
	border: solid 3px #dfdfdf;
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	border-radius: 50%;
	-webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.52);
	-moz-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.52);
	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.52);
}
#home h1 {
	font-size: 34px;
	margin: 36px 0 22px;
	color: #fff;
	padding: 0px 5px;
}
#home .text-change-title {
	margin: 10px 0;
	font-size: 22px;
	color: #bfbfbf;
	text-transform: uppercase;
}
/* ... */

